创建虚拟机网页实现

--- a/vms/templates/vm_operations.html
+++ b/vms/templates/vm_operations.html
@@ -1,5 +1,5 @@
 <div class="btn-group">
-    <button type="button" class="btn btn-sm btn-success" onclick="window.open('/vmadmin/vm/vnc/?vmid={{ vm.uuid }}')">
+    <button type="button" class="btn btn-sm btn-success btn-vnc-open" data-vm-uuid="{{ vm.uuid }}">
         <img src="/static/images/display.png"></button>
     <button type="button" class="btn btn-sm btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
