--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -44,6 +44,7 @@
                 </div>
                 <div class="form-row">
                     <input type="submit" value="登录">
+                    <a class="btn text-warning" href="{% url 'users:forget' %}">忘记密码</a>
                     <a class="btn btn-info pull-right" href="{% url 'users:register' %}">注册</a>
                 </div>
             </form>
