--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="{% url "vms:vms-list" %}">云主机</a></li>
+                    <li><a href="{% url "vms:vms-list" %}">云主机</a></li>
                     <li><a href="#">云硬盘</a></li>
                 </ul>
                 <ul class="nav navbar-nav  navbar-right">
