--- a/templates/base.html
+++ b/templates/base.html
@@ -26,8 +26,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="{% url "vms:vms-list" %}">云主机</a></li>
-                    <li><a href="#">云硬盘</a></li>
+                    <li id="nav_vm_list"><a href="{% url "vms:vms-list" %}">云主机</a></li>
+                    <li id="nav_vm_disk"><a href="#">云硬盘</a></li>
                 </ul>
                 <ul class="nav navbar-nav  navbar-right">
                     <li class="dropdown">
