--- a/vms/templates/vms_list.html
+++ b/vms/templates/vms_list.html
@@ -132,7 +132,7 @@
             </div>
             <div class="panel-footer">
                 <nav aria-label="Page navigation">
-                    <ul class="pagination">
+                    <ul class="pagination"  style="margin:0;">
                         {% with page_list=page_nav.page_list previous=page_nav.previous next=page_nav.next %}
                             {% if page_list %}
                                 {% if previous %}
